[workspace]
resolver = "3"
members = ["renderer", "nelsie"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = "line-tables-only"

[workspace.dependencies]
thiserror = { version = "2.0" }
resvg = "0.45"
svg2pdf = "0.13" # !!synchronized with resvg
xmltree = { version = "0.11" }
smallvec = "1"
