[package]
name = "nelsie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nelsie"
crate-type = ["cdylib"]

[dependencies]
renderer = { path = "../renderer" }
pyo3 = "0.25"
thiserror = { workspace = true }
