[package]
name = "nelsie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nelsie"
crate-type = ["cdylib"]

[dependencies]
renderer = { path = "../renderer" }
resvg = { workspace = true }
thiserror = { workspace = true }
xmltree = { workspace = true }
smallvec = { workspace = true }

pyo3 = { version = "0.25", features = ["abi3-py311", "extension-module"] }
itertools = "0.14"
strict-num = "*"
imagesize = { version = "0.14", default-features = false, features = ["jpeg", "png"] }
