[package]
name = "renderer"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "renderer"

[dependencies]
thiserror = { workspace = true }
resvg = { workspace = true }
svg2pdf = { workspace = true }
xmltree = { workspace = true }


taffy = "0.7"
svgtypes = "0.15" # Not necessary same as resvg but nice to be a same as in resvg
log = "0.4"
pdf-writer = "0.12"
itertools = "0.14"
rayon = "1.10"
parley = { version = "0.3" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
miniz_oxide = "0.8"
base64 = "0.22"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
skrifa = "*" # Lets us give a version specified in parley
kurbo = "*" # Lets us give a version specified in parley -> penico -> kurbo
by_address = "1"
indicatif = "0.18"
